--- a/packages/functional_widget/pubspec.yaml
+++ b/packages/functional_widget/pubspec.yaml
@@ -1,12 +1,8 @@
 name: functional_widget
-description: work in progress
+description: Decorators for function_widget_generator
 author: Remi Rousselet <darky12s@gmail.com>
 homepage: https://github.com/rrousselGit/functional_widget
-version: 0.0.0
+version: 0.0.1
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
-
-dependencies:
-  source_gen: 0.9.1+3 
-  build_config: 0.3.1+4
