--- a/packages/functional_widget_generator/pubspec.yaml
+++ b/packages/functional_widget_generator/pubspec.yaml
@@ -8,11 +8,12 @@ environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
 dependencies:
-  functional_widget:
-    path: ../functional_widget
-  source_gen: 0.9.1+3
-  build_config: 0.3.1+4
-  code_builder: 3.1.3
+  functional_widget: 0.0.1
+  source_gen: ^0.9.1+3
+  build_config: ^0.3.1+4
+  code_builder: ^3.1.3
+  build: ^1.0.1
+  analyzer: ^0.34.0
 
 dev_dependencies:
   test: 1.5.1+1
