--- a/packages/functional_widget_generator/mono_pkg.yaml
+++ b/packages/functional_widget_generator/mono_pkg.yaml
@@ -6,7 +6,7 @@ stages:
   - analyzer_and_format:
     - group:
       - dartfmt
-      - dartanalyzer: --fatal-infos --fatal-warnings .
+      - dartanalyzer: --fatal-infos --fatal-warnings lib test
   - unit_test:
     - test
 
