--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ jobs:
   include:
     - stage: analyzer_and_format
       name: "SDK: stable - DIR: packages/functional_widget - TASKS: [dartfmt -n --set-exit-if-changed ., dartanalyzer --fatal-infos --fatal-warnings .]"
-      script: ./tool/travis.sh dartfmt dartanalyzer
+      script: ./tool/travis.sh dartfmt dartanalyzer_0
       env: PKG="packages/functional_widget"
       dart: stable
     - stage: analyzer_and_format
-      name: "SDK: stable - DIR: packages/functional_widget_generator - TASKS: [dartfmt -n --set-exit-if-changed ., dartanalyzer --fatal-infos --fatal-warnings .]"
-      script: ./tool/travis.sh dartfmt dartanalyzer
+      name: "SDK: stable - DIR: packages/functional_widget_generator - TASKS: [dartfmt -n --set-exit-if-changed ., dartanalyzer --fatal-infos --fatal-warnings lib test]"
+      script: ./tool/travis.sh dartfmt dartanalyzer_1
       env: PKG="packages/functional_widget_generator"
       dart: stable
     - stage: unit_test
@@ -31,5 +31,4 @@ branches:
 cache:
   directories:
     - "$HOME/.pub-cache"
-    - packages/functional_widget/.dart_tool/build
     - packages/functional_widget_generator/.dart_tool/build
