--- a/packages/functional_widget/pubspec.yaml
+++ b/packages/functional_widget/pubspec.yaml
@@ -1,8 +1,8 @@
 name: functional_widget
-description: Decorators for function_widget_generator
+description: Annotations for function_widget_generator used to generate widget classes from a function
 author: Remi Rousselet <darky12s@gmail.com>
 homepage: https://github.com/rrousselGit/functional_widget
-version: 0.0.1
+version: 0.0.2
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
