--- a/packages/functional_widget_generator/pubspec.yaml
+++ b/packages/functional_widget_generator/pubspec.yaml
@@ -1,19 +1,19 @@
 name: functional_widget_generator
 description: work in progress
 author: Remi Rousselet <darky12s@gmail.com>
-homepage: https://github.com/rrousselGit/functional_widget
+homepage: https://github.com/rrousselGit/functional_widget/tree/master/packages/functional_widget_generator
 version: 0.0.2
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
 dependencies:
-  functional_widget: 0.0.2
-  source_gen: ^0.9.1+3
-  build_config: ^0.3.1+4
-  code_builder: ^3.1.3
-  build: ^1.0.1
-  analyzer: ^0.33.0
+  functional_widget: '>=0.0.0 <0.1.0'
+  source_gen: ^0.9.0
+  build_config: '>=0.3.0 <1.0.0'
+  code_builder: '>=3.1.3 <4.0.0'
+  build: '>=0.12.6 <2.0.0'
+  analyzer: '>=0.32.2 <0.34.0'
 
 dev_dependencies:
   test: 1.5.1+1
