--- a/functional_widget/example/pubspec.yaml
+++ b/functional_widget/example/pubspec.yaml
@@ -1,7 +1,7 @@
 name: example
 
 dependencies:
-  functional_widget: 0.0.2
+  functional_widget_annotation: 0.0.2
   flutter:
     sdk: flutter 
 
@@ -10,7 +10,7 @@ dev_dependencies:
   build_runner: 1.1.2
 
 dependency_overrides:
-  functional_widget:
-    path: ../../functional_widget
+  functional_widget_annotation:
+    path: ../../functional_widget_annotation
   functional_widget_generator:
     path: ../
