--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -1,14 +1,14 @@
 name: functional_widget_generator
 description: work in progress
 author: Remi Rousselet <darky12s@gmail.com>
-homepage: https://github.com/rrousselGit/functional_widget/tree/master/packages/functional_widget_generator
+homepage: https://github.com/rrousselGit/functional_widget_annotation/tree/master/packages/functional_widget_generator
 version: 0.0.2
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
 dependencies:
-  functional_widget: '>=0.0.0 <0.1.0'
+  functional_widget_annotation: '>=0.0.0 <0.1.0'
   source_gen: ^0.9.0
   build_config: '>=0.3.0 <1.0.0'
   code_builder: '>=3.1.3 <4.0.0'
