--- a/functional_widget/build.yaml
+++ b/functional_widget/build.yaml
@@ -1,6 +1,6 @@
 builders:
-  functional_widget_generator:
-    import: "package:functional_widget_generator/builder.dart"
+  functional_widget:
+    import: "package:functional_widget/builder.dart"
     builder_factories: ["functionalWidget"]
     build_extensions: { ".dart": [".functional_widget.g.part"] }
     auto_apply: dependents
