--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -1,7 +1,7 @@
-name: functional_widget_generator
+name: functional_widget
 description: work in progress
 author: Remi Rousselet <darky12s@gmail.com>
-homepage: https://github.com/rrousselGit/functional_widget_annotation/tree/master/packages/functional_widget_generator
+homepage: https://github.com/rrousselGit/functional_widget_annotation/tree/master/packages/functional_widget
 version: 0.0.2
 
 environment:
@@ -19,3 +19,7 @@ dev_dependencies:
   test: 1.5.1+1
   mockito: 4.0.0
   dart_style: 1.2.0
+
+dependency_overrides:
+  functional_widget_annotation:
+    path: ../functional_widget_annotation
