--- a/.travis.yml
+++ b/.travis.yml
@@ -4,19 +4,19 @@ language: dart
 jobs:
   include:
     - stage: analyzer_and_format
-      name: "SDK: stable - DIR: packages/functional_widget_annotation - TASKS: [dartfmt -n --set-exit-if-changed ., dartanalyzer --fatal-infos --fatal-warnings .]"
+      name: "SDK: stable - DIR: functional_widget - TASKS: [dartfmt -n --set-exit-if-changed ., dartanalyzer --fatal-infos --fatal-warnings lib test]"
       script: ./tool/travis.sh dartfmt dartanalyzer_0
-      env: PKG="packages/functional_widget_annotation"
-      dart: stable
-    - stage: analyzer_and_format
-      name: "SDK: stable - DIR: packages/functional_widget - TASKS: [dartfmt -n --set-exit-if-changed ., dartanalyzer --fatal-infos --fatal-warnings lib test]"
-      script: ./tool/travis.sh dartfmt dartanalyzer_1
-      env: PKG="packages/functional_widget"
+      env: PKG="functional_widget"
       dart: stable
     - stage: unit_test
-      name: "SDK: stable - DIR: packages/functional_widget - TASKS: pub run test"
+      name: "SDK: stable - DIR: functional_widget - TASKS: pub run test"
       script: ./tool/travis.sh test
-      env: PKG="packages/functional_widget"
+      env: PKG="functional_widget"
+      dart: stable
+    - stage: analyzer_and_format
+      name: "SDK: stable - DIR: functional_widget_annotation - TASKS: [dartfmt -n --set-exit-if-changed ., dartanalyzer --fatal-infos --fatal-warnings lib]"
+      script: ./tool/travis.sh dartfmt dartanalyzer_1
+      env: PKG="functional_widget_annotation"
       dart: stable
 
 stages:
@@ -31,4 +31,4 @@ branches:
 cache:
   directories:
     - "$HOME/.pub-cache"
-    - packages/functional_widget/.dart_tool/build
+    - functional_widget/.dart_tool/build
