--- a/functional_widget_annotation/mono_pkg.yaml
+++ b/functional_widget_annotation/mono_pkg.yaml
@@ -6,4 +6,4 @@ stages:
   - analyzer_and_format:
     - group:
       - dartfmt
-      - dartanalyzer: --fatal-infos --fatal-warnings .
+      - dartanalyzer: --fatal-infos --fatal-warnings lib
