--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -8,14 +8,15 @@ environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
 dependencies:
-  functional_widget_annotation: '>=0.1.0 <0.2.0'
+  functional_widget_annotation: ">=0.1.0 <0.2.0"
   source_gen: ^0.9.0
-  build_config: '>=0.3.0 <1.0.0'
-  code_builder: '>=3.1.3 <4.0.0'
-  build: '>=0.12.6 <2.0.0'
-  analyzer: '>=0.32.2 <0.34.0'
+  build_config: ">=0.3.0 <1.0.0"
+  code_builder: ">=3.1.3 <4.0.0"
+  build: ">=0.12.6 <2.0.0"
+  analyzer: ">=0.32.2 <0.34.0"
 
 dev_dependencies:
   test: 1.5.1+1
   mockito: 4.0.0
   dart_style: 1.2.0
+  pedantic: 1.4.0
