--- a/functional_widget/mono_pkg.yaml
+++ b/functional_widget/mono_pkg.yaml
@@ -6,9 +6,9 @@ stages:
   - analyzer_and_format:
     - group:
       - dartfmt
-      - dartanalyzer: --fatal-infos --fatal-warnings lib test
+      - command: flutter analyze --no-pub --no-preamble
   - unit_test:
-    - test
+    - command:  flutter pub pub run test
 
 cache:
   directories:
