--- a/functional_widget/analysis_options.yaml
+++ b/functional_widget/analysis_options.yaml
@@ -1,7 +1,7 @@
 include: package:pedantic/analysis_options.yaml
 analyzer:
   exclude:
-    - example/**/*.g.dart
+    - example/lib/*.g.dart
   strong-mode:
     implicit-casts: false
     implicit-dynamic: false
