--- a/functional_widget/mono_pkg.yaml
+++ b/functional_widget/mono_pkg.yaml
@@ -5,10 +5,10 @@ dart:
 stages:
   - analyzer_and_format:
     - group:
-      - command: flutter format --set-exit-if-changed .
-      - command: flutter analyze --no-pub --no-preamble
+      - dartfmt
+      - dartanalyzer: --fatal-infos --fatal-warnings lib test
   - unit_test:
-    - command:  flutter pub pub run test
+    - test
 
 cache:
   directories:
