--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -2,7 +2,7 @@ name: functional_widget
 description: A code generator that generates widget classes from their implementation as a function.
 author: Remi Rousselet <darky12s@gmail.com>
 homepage: https://github.com/rrousselGit/functional_widget/tree/master/functional_widget
-version: 0.2.2
+version: 0.3.0
 
 environment:
     sdk: '>=2.0.0-dev.68.0 <3.0.0'
@@ -14,6 +14,7 @@ dependencies:
     code_builder: '>=3.1.3 <4.0.0'
     build: '>=0.12.6 <2.0.0'
     analyzer: '>=0.32.2 <0.34.0'
+    meta:
 
 dev_dependencies:
     test: 1.5.1+1
@@ -23,4 +24,4 @@ dev_dependencies:
     build_runner: 1.1.2
     build_test: ^0.10.4
     code_gen_tester:
-        path: ../code_gen_tester 
+        path: ../code_gen_tester
