--- a/functional_widget_annotation/example/pubspec.yaml
+++ b/functional_widget_annotation/example/pubspec.yaml
@@ -6,8 +6,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  functional_widget_annotation:
-    path: ..
+  functional_widget_annotation: ^0.3.0
 
 dev_dependencies:
   build_runner:
