--- a/functional_widget/example/pubspec.yaml
+++ b/functional_widget/example/pubspec.yaml
@@ -1,16 +1,11 @@
 name: example
 
 dependencies:
-  functional_widget_annotation: 0.0.2
+  functional_widget_annotation: ^0.3.0
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  functional_widget: 0.0.2
-  build_runner: 1.1.2
-
-dependency_overrides:
-  functional_widget_annotation:
-    path: ../../functional_widget_annotation
   functional_widget:
     path: ../
+  build_runner: 1.1.2
