--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     code_builder: '>=3.1.3 <4.0.0'
     build: '>=0.12.6 <2.0.0'
     analyzer: '>=0.32.2 <0.34.0'
-    meta:
+    meta: ^1.1.6
 
 dev_dependencies:
     test: 1.5.1+1
