--- a/functional_widget_annotation/example/pubspec.yaml
+++ b/functional_widget_annotation/example/pubspec.yaml
@@ -9,6 +9,6 @@ dependencies:
   functional_widget_annotation: ^0.3.0
 
 dev_dependencies:
-  build_runner:
+  build_runner: 1.1.2
   functional_widget:
     path: ../../functional_widget 
