--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -2,21 +2,26 @@ name: functional_widget
 description: A code generator that generates widget classes from their implementation as a function.
 author: Remi Rousselet <darky12s@gmail.com>
 homepage: https://github.com/rrousselGit/functional_widget/tree/master/functional_widget
-version: 0.2.2
+version: 0.3.0
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+    sdk: '>=2.0.0-dev.68.0 <3.0.0'
 
 dependencies:
-  functional_widget_annotation: ">=0.1.0 <0.2.0"
-  source_gen: ^0.9.0
-  build_config: ">=0.3.0 <1.0.0"
-  code_builder: ">=3.1.3 <4.0.0"
-  build: ">=0.12.6 <2.0.0"
-  analyzer: ">=0.32.2 <0.34.0"
+    functional_widget_annotation: ^0.3.0
+    source_gen: ^0.9.0
+    build_config: '>=0.3.0 <1.0.0'
+    code_builder: '>=3.1.3 <4.0.0'
+    build: '>=0.12.6 <2.0.0'
+    analyzer: '>=0.32.2 <0.34.0'
+    meta: ^1.1.6
 
 dev_dependencies:
-  test: 1.5.1+1
-  mockito: 4.0.0
-  dart_style: 1.2.0
-  pedantic: 1.4.0
+    test: 1.5.1+1
+    mockito: 4.0.0
+    dart_style: 1.2.0
+    pedantic: 1.4.0
+    build_runner: 1.1.2
+    build_test: ^0.10.4
+    code_gen_tester:
+        path: ../code_gen_tester
