--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -2,10 +2,10 @@ name: functional_widget
 description: A code generator that generates widget classes from their implementation as a function.
 author: Remi Rousselet <darky12s@gmail.com>
 homepage: https://github.com/rrousselGit/functional_widget/tree/master/functional_widget
-version: 0.4.0
+version: 0.5.0
 
 environment:
-    sdk: '>=2.0.0-dev.68.0 <3.0.0'
+    sdk: '>=2.1.0 <3.0.0'
 
 dependencies:
     functional_widget_annotation: ^0.3.0
