--- a/functional_widget_annotation/example/pubspec.yaml
+++ b/functional_widget_annotation/example/pubspec.yaml
@@ -1,7 +1,7 @@
-name: example
+name: functional_widget_annotation_example
 description: A new Flutter project.
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0" 
+  sdk: '>=2.0.0-dev.68.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -11,4 +11,4 @@ dependencies:
 dev_dependencies:
   build_runner: 1.1.2
   functional_widget:
-    path: ../../functional_widget 
+    path: ../../functional_widget
