operator== override identical

--- a/functional_widget/example/build.yaml
+++ b/functional_widget/example/build.yaml
@@ -5,4 +5,4 @@ targets:
         options:
           debugFillProperties: true
           widgetType: hook
-          equality: smart
+          equality: equal
