--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,16 @@ jobs:
       script: ./tool/travis.sh test
       env: PKG="functional_widget"
       dart: stable
+    - stage: unit_test
+      name: "SDK: stable - DIR: functional_widget - TASKS: pub run test_coverage"
+      script: ./tool/travis.sh command_0
+      env: PKG="functional_widget"
+      dart: stable
+    - stage: unit_test
+      name: "SDK: stable - DIR: functional_widget - TASKS: bash <(curl -s https://codecov.io/bash)"
+      script: ./tool/travis.sh command_1
+      env: PKG="functional_widget"
+      dart: stable
     - stage: analyzer_and_format
       name: "SDK: stable - DIR: functional_widget_annotation - TASKS: [dartfmt -n --set-exit-if-changed ., dartanalyzer --fatal-infos --fatal-warnings lib]"
       script: ./tool/travis.sh dartfmt dartanalyzer_1
