--- a/functional_widget/example/pubspec.yaml
+++ b/functional_widget/example/pubspec.yaml
@@ -6,9 +6,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  functional_widget_annotation: ^0.3.0
+  functional_widget_annotation: ^0.5.0
 
 dev_dependencies:
   build_runner: 1.1.2
   functional_widget:
     path: ../../functional_widget 
+
+dependency_overrides:
+    functional_widget_annotation:
+        path: ../../functional_widget_annotation
