--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -25,3 +25,7 @@ dev_dependencies:
     test_coverage: ^0.2.0
     code_gen_tester:
         path: ../code_gen_tester
+
+dependency_overrides:
+    functional_widget_annotation:
+        path: ../functional_widget_annotation
