--- a/functional_widget/example/pubspec.yaml
+++ b/functional_widget/example/pubspec.yaml
@@ -11,8 +11,4 @@ dependencies:
 dev_dependencies:
   build_runner: 1.1.2
   functional_widget:
-    path: ../../functional_widget 
-
-dependency_overrides:
-    functional_widget_annotation:
-        path: ../../functional_widget_annotation
+    path: ../
