--- a/code_gen_tester/pubspec.yaml
+++ b/code_gen_tester/pubspec.yaml
@@ -6,8 +6,11 @@ dependencies:
     source_gen: ^0.9.0
     build: '>=0.12.6 <2.0.0'
     analyzer: '>=0.32.2 <0.34.0'
-    test: 1.5.1+1
     dart_style: 1.2.0
     pedantic: 1.4.0
     build_runner: 1.1.2
     build_test: ^0.10.4
+
+dev_dependencies:
+    flutter_test:
+        sdk: flutter
