--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
     sdk: '>=2.1.0 <3.0.0'
 
 dependencies:
+    flutter:
+        sdk: flutter
     functional_widget_annotation: ^0.5.0
     source_gen: ^0.9.0
     build_config: '>=0.3.0 <1.0.0'
@@ -17,7 +19,8 @@ dependencies:
     meta: ^1.1.6
 
 dev_dependencies:
-    test: 1.5.1+1
+    flutter_test:
+        sdk: flutter
     mockito: 4.0.0
     dart_style: 1.2.0
     pedantic: 1.4.0
