--- a/code_gen_tester/pubspec.yaml
+++ b/code_gen_tester/pubspec.yaml
@@ -3,11 +3,11 @@ version: 0.0.1
 environment:
     sdk: '>=2.0.0-dev.68.0 <3.0.0'
 dependencies:
-    source_gen: ^0.9.0
-    build: '>=0.12.6 <2.0.0'
-    analyzer: '>=0.32.2 <0.34.0'
-    test: 1.5.1+1
-    dart_style: 1.2.0
+    source_gen: ^0.9.4+1
+    build: '>=1.1.2 <2.0.0'
+    analyzer: '>=0.35.4 <0.36.0'
+    test: ^1.5.3
+    dart_style: '>=1.2.4 <1.2.5'
     pedantic: 1.4.0
-    build_runner: 1.1.2
+    build_runner: 1.3.1
     build_test: ^0.10.4
