--- a/functional_widget/example/pubspec.yaml
+++ b/functional_widget/example/pubspec.yaml
@@ -6,9 +6,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  functional_widget_annotation: ^0.5.0
+  functional_widget_annotation:
+    path: ../../functional_widget_annotation
 
 dev_dependencies:
-  build_runner: 1.1.2
+  build_runner: 1.3.1
   functional_widget:
     path: ../
