--- a/functional_widget/example/pubspec.yaml
+++ b/functional_widget/example/pubspec.yaml
@@ -6,8 +6,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  functional_widget_annotation:
-    path: ../../functional_widget_annotation
+  functional_widget_annotation: ^0.5.0
 
 dev_dependencies:
   build_runner: 1.3.1
