--- a/functional_widget/example/pubspec.yaml
+++ b/functional_widget/example/pubspec.yaml
@@ -8,7 +8,5 @@ dependencies:
     sdk: flutter
   functional_widget_annotation: ^0.5.0
 
-dev_dependencies:
-  build_runner: 1.3.1
-  functional_widget:
-    path: ../
+builders:
+  functional_widget: ^0.6.0
