--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -8,7 +8,8 @@ environment:
     sdk: '>=2.1.0 <3.0.0'
 
 dependencies:
-    functional_widget_annotation: ^0.5.1
+    functional_widget_annotation: #^0.5.1
+        path: ../functional_widget_annotation
     source_gen: ^0.9.4+1
     build_config: '>=0.3.1+4 <1.0.0'
     code_builder: '>=3.2.0 <4.0.0'
