--- a/code_gen_tester/pubspec.yaml
+++ b/code_gen_tester/pubspec.yaml
@@ -7,7 +7,7 @@ dependencies:
     build: '>=1.1.2 <2.0.0'
     analyzer: '>=0.38.5 <0.40.0'
     test: ^1.5.3
-    dart_style: '>=1.2.4 <1.2.5'
+    dart_style: ^1.2.4
     pedantic: 1.4.0
     build_runner: 1.3.1
     build_test: ^0.10.4
