--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -5,23 +5,23 @@ homepage: https://github.com/rrousselGit/functional_widget/tree/master/functiona
 version: 0.7.1
 
 environment:
-    sdk: '>=2.1.0 <3.0.0'
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-    functional_widget_annotation: ^0.5.0
-    source_gen: ^0.9.4+1
-    build_config: '>=0.3.1+4 <1.0.0'
-    code_builder: '>=3.2.0 <4.0.0'
-    build: '>=1.1.2 <2.0.0'
-    analyzer: '>=0.35.4 <0.37.0'
-    meta: ^1.1.6
+  functional_widget_annotation: ^0.5.0
+  source_gen: ^0.9.4+1
+  build_config: ">=0.3.1+4 <1.0.0"
+  code_builder: ">=3.2.0 <4.0.0"
+  build: ">=1.1.2 <2.0.0"
+  analyzer: ">=0.35.4 <1.0.0"
+  meta: ^1.1.0
 
 dev_dependencies:
-    test: ^1.5.3
-    mockito: 4.0.0
-    dart_style: '>=1.2.4 <1.2.5'
-    pedantic: 1.4.0
-    build_runner: 1.3.1
-    test_coverage: ^0.2.0
-    code_gen_tester:
-        path: ../code_gen_tester
+  test: ^1.5.3
+  mockito: 4.0.0
+  dart_style: ">=1.2.4 <1.2.5"
+  pedantic: 1.4.0
+  build_runner: ">=1.3.1 <2.0.0"
+  test_coverage: ^0.2.0
+  code_gen_tester:
+    path: ../code_gen_tester
