--- a/code_gen_tester/pubspec.yaml
+++ b/code_gen_tester/pubspec.yaml
@@ -1,13 +1,13 @@
 name: code_gen_tester
 version: 0.0.1
 environment:
-    sdk: '>=2.0.0-dev.68.0 <3.0.0'
+    sdk: '>=2.1.0 <3.0.0'
 dependencies:
     source_gen: ^0.9.4+1
     build: '>=1.1.2 <2.0.0'
-    analyzer: '>=0.35.4 <0.36.0'
+    analyzer: '>=0.35.4 <1.0.0'
     test: ^1.5.3
-    dart_style: '>=1.2.4 <1.2.5'
+    dart_style: ^1.2.4
     pedantic: 1.4.0
-    build_runner: 1.3.1
+    build_runner: ^1.3.1
     build_test: ^0.10.4
