--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
 dev_dependencies:
   test: ^1.5.3
   mockito: 4.0.0
-  dart_style: ">=1.2.4 <1.2.5"
+  dart_style: ^1.2.4
   pedantic: 1.4.0
   build_runner: ">=1.3.1 <2.0.0"
   test_coverage: ^0.2.0
