--- a/functional_widget_annotation/example/pubspec.yaml
+++ b/functional_widget_annotation/example/pubspec.yaml
@@ -1,14 +1,14 @@
 name: functional_widget_annotation_example
 description: A new Flutter project.
 environment:
-  sdk: '>=2.0.0-dev.68.0 <3.0.0'
+  sdk: ^2.5.0
 
 dependencies:
   flutter:
     sdk: flutter
-  functional_widget_annotation: ^0.5.0
+  functional_widget_annotation: ^0.5.1
 
 dev_dependencies:
-  build_runner: 1.3.1
+  build_runner: ^1.9.0
   functional_widget:
     path: ../../functional_widget
