--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/rrousselGit/functional_widget/tree/master/functiona
 version: 0.7.3
 
 environment:
-  sdk: ^2.5.0
+  sdk: ">=2.5.0 <3.0.0"
 
 dependencies:
   functional_widget_annotation: ^0.5.1
