--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -2,13 +2,12 @@ name: functional_widget
 description: A code generator that generates widget classes from their implementation as a function.
 author: Remi Rousselet <darky12s@gmail.com>
 homepage: https://github.com/rrousselGit/functional_widget/tree/master/functional_widget
-version: 0.7.3
-
+version: 0.8.0
 environment:
   sdk: ">=2.5.0 <3.0.0"
 
 dependencies:
-  functional_widget_annotation: ^0.5.1
+  functional_widget_annotation: ">=0.8.0 <2.0.0"
   source_gen: ^0.9.5
   build_config: ^0.4.2
   code_builder: ^3.2.1
@@ -24,4 +23,4 @@ dev_dependencies:
   build_runner: ^1.9.0
   test_coverage: ^0.4.1
   code_gen_tester:
-    path: ../code_gen_tester
+    path: ./code_gen_tester
