--- a/functional_widget/code_gen_tester/pubspec.yaml
+++ b/functional_widget/code_gen_tester/pubspec.yaml
@@ -1,13 +1,23 @@
 name: code_gen_tester
 version: 0.0.1
+
 environment:
-    sdk: ^2.5.0
+  sdk: ^2.5.0
+
 dependencies:
-    source_gen: ^0.9.5
-    build: ^1.2.2
-    analyzer: ^0.39.8
-    test: ^1.14.3
-    dart_style: ^1.3.6
-    pedantic: ^1.9.0
-    build_runner: ^1.9.0
-    build_test: ^1.0.0
+  test: ^1.15.4
+  dart_style: ^1.3.6
+  pedantic: ^1.9.0
+  build_runner: ^1.10.3
+  build_test: ^1.0.0
+  analyzer: ">=0.39.5 <1.0.0"
+  build: ">=0.12.6 <2.0.0"
+  build_config: ">=0.4.2 <1.0.0"
+  meta: ">=1.2.0 <2.0.0"
+  functional_widget_annotation: ">=0.8.0 <2.0.0"
+  source_gen: ^0.9.5
+  code_builder: ^3.2.1
+
+dev_dependencies:
+  mockito: ^4.1.1
+  test_coverage: ^0.4.1
