--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -7,20 +7,20 @@ environment:
   sdk: ">=2.5.0 <3.0.0"
 
 dependencies:
+  analyzer: '>=0.39.5 <1.0.0'
+  build: ">=0.12.6 <2.0.0"
+  build_config: ">=0.4.2 <1.0.0"
+  meta: ">=1.2.0 <2.0.0"
   functional_widget_annotation: ">=0.8.0 <2.0.0"
   source_gen: ^0.9.5
-  build_config: ^0.4.2
   code_builder: ^3.2.1
-  build: ^1.2.2
-  analyzer: ^0.39.8
-  meta: ^1.1.8
 
 dev_dependencies:
-  test: ^1.14.3
+  test: ^1.15.4
   mockito: ^4.1.1
   dart_style: ^1.3.6
   pedantic: ^1.9.0
-  build_runner: ^1.9.0
+  build_runner: ^1.10.3
   test_coverage: ^0.4.1
   code_gen_tester:
     path: ./code_gen_tester
