Enable analyzer versions up to (not including) 0.41.0
There is an analyzer bug fixed on 0.40.2 where watched files are
refreshed more often than they should during code gen, leading to
deadlocks.

See https://github.com/dart-lang/sdk/issues/43073

This change enables affected projects using functional_widget to update
to versions of the analyzer where the bug has been fixed.

--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   build_config: ^0.4.2
   code_builder: ^3.2.1
   build: ^1.2.2
-  analyzer: ^0.39.8
+  analyzer: ">=0.39.8 <0.41.0"
   meta: ^1.1.8
 
 dev_dependencies:
