--- a/functional_widget/code_gen_tester/pubspec.yaml
+++ b/functional_widget/code_gen_tester/pubspec.yaml
@@ -5,7 +5,7 @@ environment:
 dependencies:
     source_gen: ^0.9.5
     build: ^1.2.2
-    analyzer: ^0.39.8
+    analyzer: ">=0.39.8 <0.41.0"
     test: ^1.14.3
     dart_style: ^1.3.6
     pedantic: ^1.9.0
