--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ jobs:
       env: PKGS="functional_widget_annotation"
       script: tool/ci.sh dartfmt dartanalyzer_1
     - stage: unit_test
-      name: "PKG: functional_widget; `pub run test`"
+      name: "PKG: functional_widget; `pub run --no-sound-null-safety test`"
       dart: stable
       os: linux
       env: PKGS="functional_widget"
