--- a/functional_widget/analysis_options.yaml
+++ b/functional_widget/analysis_options.yaml
@@ -5,6 +5,8 @@ analyzer:
   strong-mode:
     implicit-casts: false
     implicit-dynamic: false
+  errors:
+    import_of_legacy_library_into_null_safe: ignore
 linter:
   rules:
     - annotate_overrides
