--- a/functional_widget/pubspec.yaml
+++ b/functional_widget/pubspec.yaml
@@ -4,16 +4,19 @@ author: Remi Rousselet <darky12s@gmail.com>
 homepage: https://github.com/rrousselGit/functional_widget/tree/master/functional_widget
 version: 0.8.1
 environment:
-  sdk: ">=2.5.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  analyzer: '>=0.39.5 <1.0.0'
+  analyzer: ^1.1.0
   build: ">=0.12.6 <2.0.0"
   build_config: ">=0.4.2 <1.0.0"
   meta: ">=1.2.0 <2.0.0"
   functional_widget_annotation: ">=0.8.0 <2.0.0"
   source_gen: ^0.9.5
-  code_builder: ^3.2.1
+  code_builder: ^3.6.0
+
+dependency_overrides:
+  analyzer: ^1.1.0
 
 dev_dependencies:
   test: ^1.15.4
