--- a/packages/functional_widget/pubspec.yaml
+++ b/packages/functional_widget/pubspec.yaml
@@ -25,4 +25,4 @@ dev_dependencies:
   pedantic: ^1.9.0
   build_runner: ^1.10.3
   code_gen_tester:
-    path: ./code_gen_tester
+    path: ../code_gen_tester
