--- a/packages/functional_widget/pubspec.yaml
+++ b/packages/functional_widget/pubspec.yaml
@@ -2,7 +2,8 @@ name: functional_widget
 description: A code generator that generates widget classes from their implementation as a function.
 author: Remi Rousselet <darky12s@gmail.com>
 homepage: https://github.com/rrousselGit/functional_widget/tree/master/functional_widget
-version: 0.8.1
+version: 0.9.0
+
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
@@ -11,12 +12,14 @@ dependencies:
   build: ">=0.12.6 <2.0.0"
   build_config: ">=0.4.2 <1.0.0"
   meta: ">=1.2.0 <2.0.0"
-  functional_widget_annotation: ">=0.8.0 <2.0.0"
+  functional_widget_annotation: ^0.9.0
   source_gen: ^0.9.5
   code_builder: ^3.6.0
 
 dependency_overrides:
   analyzer: ^1.1.0
+  functional_widget_annotation:
+    path: ../functional_widget_annotation
 
 dev_dependencies:
   test: ^1.15.4
