--- a/packages/code_gen_tester/pubspec.yaml
+++ b/packages/code_gen_tester/pubspec.yaml
@@ -2,16 +2,16 @@ name: code_gen_tester
 version: 0.0.1
 
 environment:
-  sdk: ^2.5.0
+  sdk: ^2.12.0
 
 dependencies:
   test: ^1.15.4
   dart_style: ^1.3.6
   pedantic: ^1.9.0
-  build_runner: ^1.10.3
-  build_test: ^1.0.0
+  build_runner: ^1.12.1
+  build_test: ^2.0.0
   analyzer: ^1.0.0
-  build: ">=0.12.6 <2.0.0"
+  build: ">=2.0.0 <3.0.0"
   build_config: ">=0.4.2 <1.0.0"
   meta: ">=1.2.0 <2.0.0"
   functional_widget_annotation: ^0.9.0
@@ -19,8 +19,6 @@ dependencies:
   code_builder: ^3.2.1
 
 dependency_overrides:
+  build: ^2.0.0
   functional_widget_annotation:
     path: ../functional_widget_annotation
-
-dev_dependencies:
-  mockito: ^4.1.1
