--- a/packages/code_gen_tester/pubspec.yaml
+++ b/packages/code_gen_tester/pubspec.yaml
@@ -11,9 +11,9 @@ dependencies:
   build_runner: ^1.12.1
   build_test: ^2.0.0
   analyzer: ^1.0.0
-  build: ">=2.0.0 <3.0.0"
+  build: ^2.0.0
   build_config: ">=0.4.2 <1.0.0"
-  meta: ">=1.2.0 <2.0.0"
+  meta: ^1.2.0
   functional_widget_annotation: ^0.9.0
   source_gen: ^1.0.0
   code_builder: ^3.2.1
@@ -21,4 +21,3 @@ dependencies:
 dependency_overrides:
   functional_widget_annotation:
     path: ../functional_widget_annotation
-
