--- a/packages/functional_widget/pubspec.yaml
+++ b/packages/functional_widget/pubspec.yaml
@@ -9,9 +9,9 @@ environment:
 
 dependencies:
   analyzer: ^1.1.0
-  build: ">=2.0.0 <3.0.0"
+  build: ^2.0.0
   build_config: ">=0.4.2 <1.0.0"
-  meta: ">=1.2.0 <2.0.0"
+  meta: ^1.2.0
   functional_widget_annotation: ^0.9.0
   source_gen: ^1.0.0
   code_builder: ^3.6.0
