--- a/packages/code_gen_tester/pubspec.yaml
+++ b/packages/code_gen_tester/pubspec.yaml
@@ -16,8 +16,11 @@ dependencies:
   meta: ^1.2.0
   functional_widget_annotation: ^0.9.0
   source_gen: ^1.0.0
-  code_builder: ^3.2.1
+  code_builder: ^4.0.0
 
 dependency_overrides:
   functional_widget_annotation:
     path: ../functional_widget_annotation
+  code_builder:
+    git:
+      url: https://github.com/dart-lang/code_builder/
