--- a/packages/functional_widget/pubspec.yaml
+++ b/packages/functional_widget/pubspec.yaml
@@ -2,29 +2,25 @@ name: functional_widget
 description: A code generator that generates widget classes from their implementation as a function.
 author: Remi Rousselet <darky12s@gmail.com>
 homepage: https://github.com/rrousselGit/functional_widget/tree/master/functional_widget
-version: 0.9.0
+version: 0.9.0+1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   analyzer: ^1.1.0
-  build: ">=0.12.6 <2.0.0"
-  build_config: ">=0.4.2 <1.0.0"
-  meta: ">=1.2.0 <2.0.0"
+  build: ^2.0.0
+  build_config: ^1.0.0
+  meta: ^1.2.0
   functional_widget_annotation: ^0.9.0
-  source_gen: ^0.9.5
-  code_builder: ^3.6.0
-
-dependency_overrides:
-  functional_widget_annotation:
-    path: ../functional_widget_annotation
+  source_gen: ^1.0.0
+  code_builder: ^4.0.0
 
 dev_dependencies:
   test: ^1.15.4
   mockito: ^4.1.1
-  dart_style: ^1.3.6
+  dart_style: ^2.0.0
   pedantic: ^1.9.0
-  build_runner: ^1.10.3
+  build_runner: ^2.0.0
   code_gen_tester:
     path: ../code_gen_tester
