--- a/packages/functional_widget/pubspec.yaml
+++ b/packages/functional_widget/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   functional_widget_annotation: ^0.9.0
   source_gen: ^1.0.0
   code_builder: ^4.0.0
+  collection: ^1.0.0
 
 dev_dependencies:
   test: ^1.15.4
