--- a/packages/functional_widget/pubspec.yaml
+++ b/packages/functional_widget/pubspec.yaml
@@ -1,7 +1,7 @@
 name: functional_widget
 description: A code generator that generates widget classes from their implementation as a function.
 homepage: https://github.com/rrousselGit/functional_widget/tree/master/packages/functional_widget
-version: 0.9.0+2
+version: 0.9.1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
