--- a/packages/functional_widget/pubspec.yaml
+++ b/packages/functional_widget/pubspec.yaml
@@ -16,6 +16,10 @@ dependencies:
   code_builder: ^4.0.0
   collection: ^1.0.0
 
+dependency_overrides:
+  functional_widget_annotation:
+    path: ../functional_widget_annotation
+
 dev_dependencies:
   test: ^1.17.0
   dart_style: ^2.0.0
