--- a/packages/functional_widget/example/pubspec.yaml
+++ b/packages/functional_widget/example/pubspec.yaml
@@ -6,6 +6,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.18.0
   functional_widget_annotation:
 
 dev_dependencies:
