--- a/packages/functional_widget/analysis_options.yaml
+++ b/packages/functional_widget/analysis_options.yaml
@@ -1,7 +1,6 @@
-include: package:pedantic/analysis_options.yaml
 analyzer:
   exclude:
-    - example/lib/*.g.dart
+    - "*.g.dart"
   strong-mode:
     implicit-casts: false
     implicit-dynamic: false
