--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,7 @@ jobs:
     strategy:
       matrix:
         channel:
-          - dev
-          - stable
+          - master
 
     steps:
       - uses: actions/checkout@v2
