Migrate to pub workspaces

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,16 +29,12 @@ jobs:
       - name: Add pub cache to PATH
         run: echo "PUB_CACHE="$HOME/.pub-cache"" >> $GITHUB_ENV
 
-      - run: dart pub global activate melos
-
-      - name: Install dependencies
-        run: melos bootstrap
-
       - name: Check format
         run: dart format --set-exit-if-changed .
 
       - name: Analyze
-        run: melos exec -- "flutter analyze"
+        run: flutter analyze
 
       - name: Run tests
-        run: melos exec --scope="functional_widget" -- "dart test"
+        run: dart test -r github
+        working-directory: packages/functional_widget
