--- a/packages/code_gen_tester/pubspec.yaml
+++ b/packages/code_gen_tester/pubspec.yaml
@@ -3,7 +3,9 @@ version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: ^2.12.0
+  sdk: ^3.6.0
+
+resolution: workspace
 
 dependencies:
   test: ^1.15.4
@@ -15,6 +17,6 @@ dependencies:
   build: ^2.0.0
   build_config: ^1.0.0
   meta: ^1.2.0
-  functional_widget_annotation: ^0.9.0
+  functional_widget_annotation:
   source_gen: ^1.0.0
   code_builder: ^4.0.0
