--- a/packages/functional_widget/example/pubspec.yaml
+++ b/packages/functional_widget/example/pubspec.yaml
@@ -3,7 +3,9 @@ description: A new Flutter project.
 publish_to: none
 
 environment:
-  sdk: ^2.16.0
+  sdk: ^3.6.0
+
+resolution: workspace
 
 dependencies:
   flutter:
@@ -12,9 +14,4 @@ dependencies:
 
 dev_dependencies:
   functional_widget:
-    path: ..
   build_runner: ^2.0.0
-
-dependency_overrides:
-  functional_widget_annotation:
-    path: ../../functional_widget_annotation
